--- a/style.css
+++ b/style.css
@@ -1,47 +1,83 @@
 *{
-    box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-body{
-    display: flex;
-    flex-direction: column;
-    
+
+.container{
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 30px;
 }
 
-    .header{
-        display: flex;
-        flex-direction: row;
-        gap: 15px;
-        background-color: #1f2937;
-        color: #f9faf8;
-    }
+.logo{
+  font-weight: 700;
+  font-size: 24px;
+}
 
-    .logo{
-        margin-right: auto;
-        font-weight: 24px #f9faf8;
-    }
+.navbar, .header{
+  background-color: #1f2937;
+  color: #f9faf8;
+}
 
-    .section1{
-        display: flex;
-        flex-direction: column;
-        max-height: 200px;
-        flex-wrap: wrap;
-        align-content: space-around;
-        align-items: flex-start;
-        text-wrap: wrap;
-        background-color: #1f2937;
-        color: #f9faf8;
-    }
+a{
+  color: #f9faf8;
+}
 
+.navbar .container{
+  display: flex;
+  height: 50px;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.navbar ul{
+  display: flex;
+  font-size: 18px;
+  gap: 15px;
+}
 
-    button{
-        max-width: 80px;
-    }
+.header{
+  min-height: 300px;
+}
+
+.header .container{
+  display: flex;
+  height: 265px;
+  justify-content: center;
+  align-items: center;
+}
+
+.header h1{
+  font-size: 48px ;
+}
+
+.img{
+  margin: 30px;
+  padding: 75px 200px;
+  margin-right: 0px;
+  background-color: gray;
+}
+
+button{
+  padding: 6px 18px;
+  background-color: #3882f6;
+}
+
+.info .container h2{
+  text-align: center;
+  padding: 20px;
+}
+
+.boxstack{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
 
 img{
-    width: 100px;
-    height: 100px;
-    align-self: auto;
+  width: 100px;
+  height: 100px;
 }
